# wo-integration

./: .gitignore  CONSTANTS_USAGE_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  ODOO_MODULE_INSTALLATION_GUIDE.md  README.md  README_ODOO_API_SETUP.md  alembic.ini  pyproject.toml  render.yaml  test.py  updated_odoo_service_method.py  whatsapp_invoice_api_access.csv  whatsapp_invoice_api_controller.py  whatsapp_invoice_api_manifest.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_template_components.py  003_add_conversation_messages.py
app/: config.py  constants.py  database.py  main.py
app/jobs/: campaign_job.py
app/models/: campaign.py  campaign_message.py  contact.py  conversation_message.py
app/routers/: campaigns.py  contacts.py  conversations.py  invoices.py  whatsapp.py
app/schemas/: campaign.py  contact.py  conversation.py  invoice.py
app/services/: ai_pipeline.py  ai_service.py  campaign_service.py  odoo_service.py  scheduler_service.py  whatsapp_service.py  ws_manager.py
app/utils/: logging.py
